@@ -51,6 +51,9 @@ Format:
 * what is entry type 0x000b ?
 * why does Windows hide the last 4096 bytes of the volume?
 
+20150723
+* worked on tests
+
 20150721
 * worked on signature check
 
